syntax = "proto3";

package alerting;

option go_package = "github.com/rancher/opni/pkg/apis/alerting/v2";

message Label {
  string name  = 1;
  string value = 2;
}

message Labels {
  repeated Label labels = 1;
}

// Matcher specifies a rule, which can match or set of labels or not.
message LabelMatcher {
  enum Type {
    EQ  = 0;
    NEQ = 1;
    RE  = 2;
    NRE = 3;
  }
  Type   type  = 1;
  string name  = 2;
  string value = 3;
}
